@@ -60,8 +60,8 @@ import org.hisp.dhis.program.ProgramStage;
 import org.hisp.dhis.program.ProgramStageService;
 import org.hisp.dhis.security.acl.AclService;
 import org.hisp.dhis.trackedentity.TrackedEntityAttribute;
-import org.hisp.dhis.user.CurrentUserService;
-import org.hisp.dhis.user.User;
+import org.hisp.dhis.user.CurrentUserUtil;
+import org.hisp.dhis.user.UserDetails;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -75,21 +75,22 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
 
   private final AclService aclService;
 
-  private final CurrentUserService currentUserService;
-
   @Override
   public List<PrefixedDimension> getQueryDimensionsByProgramStageId(
       String programId, String programStageId) {
 
-    Collection<ProgramStage> programStages = getProgramStages(programId, programStageId);
+    Set<ProgramStage> programStages = getProgramStages(programId, programStageId);
 
     if (CollectionUtils.isNotEmpty(programStages)) {
-      return programStages.stream().map(this::dimensions).flatMap(Collection::stream).toList();
+      return programStages.stream()
+          .map(this::dimensions)
+          .flatMap(Collection::stream)
+          .collect(Collectors.toList());
     }
-    return Collections.emptyList();
+    return List.of();
   }
 
-  private Collection<ProgramStage> getProgramStages(String programId, String programStageId) {
+  private Set<ProgramStage> getProgramStages(String programId, String programStageId) {
     checkProgramStageIsInProgramIfNecessary(programId, programStageId);
     return Optional.ofNullable(programStageId)
         .filter(StringUtils::isNotBlank)
@@ -121,8 +122,8 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
   }
 
   private List<PrefixedDimension> dimensions(ProgramStage programStage) {
-    User user = currentUserService.getCurrentUser();
 
+    UserDetails currentUserDetails = CurrentUserUtil.getCurrentUserDetails();
     return Optional.of(programStage)
         .map(ProgramStage::getProgram)
         .map(
@@ -131,15 +132,15 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
                     List.of(
                         ofProgramIndicators(
                             p.getProgramIndicators().stream()
-                                .filter(pi -> aclService.canRead(user, pi))
+                                .filter(pi -> aclService.canRead(currentUserDetails, pi))
                                 .collect(Collectors.toSet())),
                         filterByValueType(QUERY, ofDataElements(programStage)),
                         filterByValueType(
                             QUERY,
                             ofItemsWithProgram(p, getTeasIfRegistrationAndNotConfidential(p))),
-                        ofItemsWithProgram(p, getCategoriesIfNeeded(p)),
+                        ofItemsWithProgram(p, getCategories(p)),
                         ofItemsWithProgram(p, getAttributeCategoryOptionGroupSetsIfNeeded(p)))))
-        .orElse(Collections.emptyList());
+        .orElse(List.of());
   }
 
   @Override
@@ -155,11 +156,11 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
                             AGGREGATE,
                             ofItemsWithProgram(
                                 ps.getProgram(), ps.getProgram().getTrackedEntityAttributes())),
-                        ofItemsWithProgram(ps.getProgram(), getCategoriesIfNeeded(ps.getProgram())),
+                        ofItemsWithProgram(ps.getProgram(), getCategories(ps.getProgram())),
                         ofItemsWithProgram(
                             ps.getProgram(),
                             getAttributeCategoryOptionGroupSetsIfNeeded(ps.getProgram())))))
-        .orElse(Collections.emptyList());
+        .orElse(List.of());
   }
 
   private List<CategoryOptionGroupSet> getAttributeCategoryOptionGroupSetsIfNeeded(
@@ -171,27 +172,26 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
                 categoryService.getAllCategoryOptionGroupSets().stream()
                     .filter(this::isTypeAttribute)
                     .collect(Collectors.toList()))
-        .orElse(Collections.emptyList());
+        .orElse(List.of());
   }
 
   private boolean isTypeAttribute(CategoryOptionGroupSet categoryOptionGroupSet) {
     return ATTRIBUTE == categoryOptionGroupSet.getDataDimensionType();
   }
 
-  private Collection<Category> getCategoriesIfNeeded(Program program) {
+  private List<Category> getCategories(Program program) {
     return Optional.of(program)
         .filter(Program::hasNonDefaultCategoryCombo)
         .map(Program::getCategoryCombo)
         .map(CategoryCombo::getCategories)
-        .orElse(Collections.emptyList());
+        .orElse(List.of());
   }
 
-  private Collection<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential(
-      Program program) {
+  private List<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential(Program program) {
     return Optional.of(program)
         .filter(Program::isRegistration)
         .map(Program::getTrackedEntityAttributes)
-        .orElse(Collections.emptyList())
+        .orElse(List.of())
         .stream()
         .filter(this::isNotConfidential)
         .collect(Collectors.toList());
