@@ -36,9 +36,8 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Collection;
 import java.util.Collections;
-import java.util.stream.Collectors;
+import java.util.List;
 import org.hisp.dhis.analytics.event.EventAnalyticsDimensionsService;
 import org.hisp.dhis.category.CategoryService;
 import org.hisp.dhis.common.BaseIdentifiableObject;
@@ -50,7 +49,6 @@ import org.hisp.dhis.program.ProgramStage;
 import org.hisp.dhis.program.ProgramStageService;
 import org.hisp.dhis.security.acl.AclService;
 import org.hisp.dhis.trackedentity.TrackedEntityAttribute;
-import org.hisp.dhis.user.CurrentUserService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -78,21 +76,17 @@ class EventAnalyticsDimensionsServiceTest {
 
     eventAnalyticsDimensionsService =
         new DefaultEventAnalyticsDimensionsService(
-            programStageService,
-            programService,
-            categoryService,
-            mock(AclService.class),
-            mock(CurrentUserService.class));
+            programStageService, programService, categoryService, mock(AclService.class));
   }
 
   @Test
   void testQueryDoesntContainDisallowedValueTypes() {
-    Collection<BaseIdentifiableObject> analyticsDimensions =
+    List<BaseIdentifiableObject> analyticsDimensions =
         eventAnalyticsDimensionsService
             .getQueryDimensionsByProgramStageId(PROGRAM_UID, "anUid")
             .stream()
             .map(PrefixedDimension::getItem)
-            .collect(Collectors.toList());
+            .toList();
 
     assertTrue(
         analyticsDimensions.stream()
@@ -108,10 +102,10 @@ class EventAnalyticsDimensionsServiceTest {
 
   @Test
   void testAggregateOnlyContainsAllowedValueTypes() {
-    Collection<BaseIdentifiableObject> analyticsDimensions =
+    List<BaseIdentifiableObject> analyticsDimensions =
         eventAnalyticsDimensionsService.getAggregateDimensionsByProgramStageId("anUid").stream()
             .map(PrefixedDimension::getItem)
-            .collect(Collectors.toList());
+            .toList();
 
     assertTrue(
         analyticsDimensions.stream()
