@@ -42,15 +42,18 @@ import static org.hisp.dhis.DhisConvenienceTest.createProgramStage;
 import static org.hisp.dhis.DhisConvenienceTest.createProgramTrackedEntityAttribute;
 import static org.hisp.dhis.DhisConvenienceTest.createTrackedEntityAttribute;
 import static org.hisp.dhis.DhisConvenienceTest.getDate;
-import static org.hisp.dhis.analytics.ColumnDataType.BIGINT;
-import static org.hisp.dhis.analytics.ColumnDataType.CHARACTER_11;
-import static org.hisp.dhis.analytics.ColumnDataType.DOUBLE;
-import static org.hisp.dhis.analytics.ColumnDataType.GEOMETRY;
-import static org.hisp.dhis.analytics.ColumnDataType.GEOMETRY_POINT;
-import static org.hisp.dhis.analytics.ColumnDataType.INTEGER;
-import static org.hisp.dhis.analytics.ColumnDataType.TEXT;
-import static org.hisp.dhis.analytics.ColumnDataType.TIMESTAMP;
+import static org.hisp.dhis.db.model.DataType.BIGINT;
+import static org.hisp.dhis.db.model.DataType.CHARACTER_11;
+import static org.hisp.dhis.db.model.DataType.DOUBLE;
+import static org.hisp.dhis.db.model.DataType.GEOMETRY;
+import static org.hisp.dhis.db.model.DataType.GEOMETRY_POINT;
+import static org.hisp.dhis.db.model.DataType.INTEGER;
+import static org.hisp.dhis.db.model.DataType.TEXT;
+import static org.hisp.dhis.db.model.DataType.TIMESTAMP;
+import static org.hisp.dhis.db.model.Table.STAGING_TABLE_SUFFIX;
+import static org.hisp.dhis.db.model.constraint.Nullable.NULL;
 import static org.hisp.dhis.period.PeriodDataProvider.DataSource.DATABASE;
+import static org.hisp.dhis.system.util.SqlUtils.quote;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
@@ -65,18 +68,17 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.hisp.dhis.analytics.AggregationType;
-import org.hisp.dhis.analytics.AnalyticsExportSettings;
-import org.hisp.dhis.analytics.AnalyticsTable;
-import org.hisp.dhis.analytics.AnalyticsTableColumn;
 import org.hisp.dhis.analytics.AnalyticsTableHookService;
-import org.hisp.dhis.analytics.AnalyticsTablePartition;
 import org.hisp.dhis.analytics.AnalyticsTableType;
 import org.hisp.dhis.analytics.AnalyticsTableUpdateParams;
-import org.hisp.dhis.analytics.ColumnNotNullConstraint;
-import org.hisp.dhis.analytics.IndexType;
 import org.hisp.dhis.analytics.partition.PartitionManager;
+import org.hisp.dhis.analytics.table.model.AnalyticsTable;
+import org.hisp.dhis.analytics.table.model.AnalyticsTableColumn;
+import org.hisp.dhis.analytics.table.model.AnalyticsTablePartition;
+import org.hisp.dhis.analytics.table.model.Skip;
+import org.hisp.dhis.analytics.table.setting.AnalyticsTableSettings;
+import org.hisp.dhis.analytics.table.util.PartitionUtils;
 import org.hisp.dhis.analytics.util.AnalyticsTableAsserter;
 import org.hisp.dhis.category.Category;
 import org.hisp.dhis.category.CategoryCombo;
@@ -86,8 +88,9 @@ import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.common.ValueType;
 import org.hisp.dhis.dataapproval.DataApprovalLevelService;
 import org.hisp.dhis.dataelement.DataElement;
-import org.hisp.dhis.jdbc.StatementBuilder;
-import org.hisp.dhis.jdbc.statementbuilder.PostgreSQLStatementBuilder;
+import org.hisp.dhis.db.model.IndexType;
+import org.hisp.dhis.db.sql.PostgreSqlBuilder;
+import org.hisp.dhis.db.sql.SqlBuilder;
 import org.hisp.dhis.organisationunit.OrganisationUnitGroupSet;
 import org.hisp.dhis.organisationunit.OrganisationUnitLevel;
 import org.hisp.dhis.organisationunit.OrganisationUnitService;
@@ -126,8 +129,6 @@ class JdbcEventAnalyticsTableManagerTest {
 
   @Mock private CategoryService categoryService;
 
-  private StatementBuilder statementBuilder;
-
   @Mock private SystemSettingManager systemSettingManager;
 
   @Mock private DatabaseInfoProvider databaseInfoProvider;
@@ -138,7 +139,9 @@ class JdbcEventAnalyticsTableManagerTest {
 
   @Mock private PeriodDataProvider periodDataProvider;
 
-  @Mock private AnalyticsExportSettings analyticsExportSettings;
+  @Mock private AnalyticsTableSettings analyticsTableSettings;
+
+  private final SqlBuilder sqlBuilder = new PostgreSqlBuilder();
 
   private JdbcEventAnalyticsTableManager subject;
 
@@ -156,17 +159,15 @@ class JdbcEventAnalyticsTableManagerTest {
       PeriodType.getAvailablePeriodTypes().stream()
           .map(
               pt -> {
-                String column = quote(pt.getName().toLowerCase());
-                return new AnalyticsTableColumn(column, TEXT, "dps" + "." + column);
+                String column = pt.getName().toLowerCase();
+                return new AnalyticsTableColumn(column, TEXT, "dps" + "." + quote(column));
               })
-          .collect(Collectors.toList());
+          .toList();
 
   private final BeanRandomizer rnd = BeanRandomizer.create();
 
   @BeforeEach
   public void setUp() {
-    statementBuilder = new PostgreSQLStatementBuilder();
-
     today = Date.from(LocalDate.of(2019, 7, 6).atStartOfDay(ZoneId.systemDefault()).toInstant());
 
     when(databaseInfoProvider.getDatabaseInfo()).thenReturn(DatabaseInfo.builder().build());
@@ -179,12 +180,12 @@ class JdbcEventAnalyticsTableManagerTest {
             mock(DataApprovalLevelService.class),
             resourceTableService,
             mock(AnalyticsTableHookService.class),
-            statementBuilder,
             mock(PartitionManager.class),
             databaseInfoProvider,
             jdbcTemplate,
-            analyticsExportSettings,
-            periodDataProvider);
+            analyticsTableSettings,
+            periodDataProvider,
+            sqlBuilder);
     assertThat(subject.getAnalyticsTableType(), is(AnalyticsTableType.EVENT));
   }
 
@@ -231,8 +232,8 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tableA, notNullValue());
     assertThat(tableB, notNullValue());
 
-    AnalyticsTablePartition partitionA = tableA.getLatestPartition();
-    AnalyticsTablePartition partitionB = tableA.getLatestPartition();
+    AnalyticsTablePartition partitionA = tableA.getLatestTablePartition();
+    AnalyticsTablePartition partitionB = tableA.getLatestTablePartition();
 
     assertThat(partitionA, notNullValue());
     assertThat(partitionA.isLatestPartition(), equalTo(true));
@@ -280,12 +281,21 @@ class JdbcEventAnalyticsTableManagerTest {
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
         .withTableType(AnalyticsTableType.EVENT)
-        .withTableName(TABLE_PREFIX + program.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + program.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + program.getUid().toLowerCase())
         .withColumnSize(56 + OU_NAME_HIERARCHY_COUNT)
-        .withDefaultColumns(subject.getFixedColumns())
+        .withDefaultColumns(JdbcEventAnalyticsTableManager.FIXED_COLS)
         .addColumns(periodColumns)
-        .addColumn(categoryA.getUid(), CHARACTER_11, "acs.", categoryA.getCreated())
-        .addColumn(categoryB.getUid(), CHARACTER_11, "acs.", categoryB.getCreated())
+        .addColumn(
+            categoryA.getUid(),
+            CHARACTER_11,
+            ("acs." + quote(categoryA.getUid())),
+            categoryA.getCreated())
+        .addColumn(
+            categoryB.getUid(),
+            CHARACTER_11,
+            ("acs." + quote(categoryB.getUid())),
+            categoryB.getCreated())
         .build()
         .verify();
   }
@@ -314,15 +324,15 @@ class JdbcEventAnalyticsTableManagerTest {
 
     assertThat(tables, hasSize(1));
 
-    AnalyticsTableColumn lastUpdated = getColumn("\"lastupdated\"", tables.get(0));
-    AnalyticsTableColumn created = getColumn("\"created\"", tables.get(0));
+    AnalyticsTableColumn lastUpdated = getColumn("lastupdated", tables.get(0));
+    AnalyticsTableColumn created = getColumn("created", tables.get(0));
 
     assertThat(
-        lastUpdated.getAlias(),
+        lastUpdated.getSelectExpression(),
         is(
             "CASE WHEN psi.lastupdatedatclient IS NOT NULL THEN psi.lastupdatedatclient ELSE psi.lastupdated END"));
     assertThat(
-        created.getAlias(),
+        created.getSelectExpression(),
         is(
             "CASE WHEN psi.createdatclient IS NOT NULL THEN psi.createdatclient ELSE psi.created END"));
   }
@@ -358,7 +368,7 @@ class JdbcEventAnalyticsTableManagerTest {
     return analyticsTable.getDimensionColumns().stream()
         .filter(col -> col.getName().equals(column))
         .findFirst()
-        .orElseThrow(() -> new IllegalArgumentException("Column " + column + " not found"));
+        .orElseThrow(() -> new IllegalArgumentException("Column '" + column + "' not found"));
   }
 
   @Test
@@ -383,13 +393,9 @@ class JdbcEventAnalyticsTableManagerTest {
 
     String aliasD1 = "(select eventdatavalues #>> '{%s, value}' " + FROM_CLAUSE + " ) as \"%s\"";
     String aliasD2 =
-        "(select cast(eventdatavalues #>> '{%s, value}' as "
-            + statementBuilder.getDoubleColumnType()
-            + ") "
+        "(select cast(eventdatavalues #>> '{%s, value}' as double precision) "
             + FROM_CLAUSE
-            + "  and eventdatavalues #>> '{%s,value}' "
-            + statementBuilder.getRegexpMatch()
-            + " '^(-?[0-9]+)(\\.[0-9]+)?$') as \"%s\"";
+            + "  and eventdatavalues #>> '{%s,value}' ~* '^(-?[0-9]+)(\\.[0-9]+)?$') as \"%s\"";
     String aliasD3 =
         "(select case when eventdatavalues #>> '{%s, value}' = 'true' then 1 when eventdatavalues #>> '{%s, value}' = 'false' then 0 else null end "
             + FROM_CLAUSE
@@ -397,9 +403,7 @@ class JdbcEventAnalyticsTableManagerTest {
     String aliasD4 =
         "(select cast(eventdatavalues #>> '{%s, value}' as timestamp) "
             + FROM_CLAUSE
-            + "  and eventdatavalues #>> '{%s,value}' "
-            + statementBuilder.getRegexpMatch()
-            + " '^\\d{4}-\\d{2}-\\d{2}(\\s|T)?((\\d{2}:)(\\d{2}:)?(\\d{2}))?(|.(\\d{3})|.(\\d{3})Z)?$') as \"%s\"";
+            + "  and eventdatavalues #>> '{%s,value}' ~* '^\\d{4}-\\d{2}-\\d{2}(\\s|T)?((\\d{2}:)(\\d{2}:)?(\\d{2}))?(|.(\\d{3})|.(\\d{3})Z)?$') as \"%s\"";
     String aliasD5 =
         "(select ou.uid from organisationunit ou where ou.uid = "
             + "(select eventdatavalues #>> '{"
@@ -412,9 +416,7 @@ class JdbcEventAnalyticsTableManagerTest {
     String aliasD6 =
         "(select cast(eventdatavalues #>> '{%s, value}' as bigint) "
             + FROM_CLAUSE
-            + "  and eventdatavalues #>> '{%s,value}' "
-            + statementBuilder.getRegexpMatch()
-            + " '^(-?[0-9]+)(\\.[0-9]+)?$') as \"%s\"";
+            + "  and eventdatavalues #>> '{%s,value}' ~* '^(-?[0-9]+)(\\.[0-9]+)?$') as \"%s\"";
     String aliasD7 =
         "(select ST_GeomFromGeoJSON('{\"type\":\"Point\", \"coordinates\":' || (eventdatavalues #>> '{%s, value}') || ', \"crs\":{\"type\":\"name\", \"properties\":{\"name\":\"EPSG:4326\"}}}') from event where eventid=psi.eventid ) as \"%s\"";
     String aliasD5_geo =
@@ -455,24 +457,58 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tables, hasSize(1));
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
-        .withTableName(TABLE_PREFIX + program.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + program.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + program.getUid().toLowerCase())
         .withTableType(AnalyticsTableType.EVENT)
         .withColumnSize(63 + OU_NAME_HIERARCHY_COUNT)
         .addColumns(periodColumns)
-        .addColumn(d1.getUid(), TEXT, toAlias(aliasD1, d1.getUid())) // ValueType.TEXT
-        .addColumn(d2.getUid(), DOUBLE, toAlias(aliasD2, d2.getUid())) // ValueType.PERCENTAGE
-        .addColumn(d3.getUid(), INTEGER, toAlias(aliasD3, d3.getUid())) // ValueType.BOOLEAN
-        .addColumn(d4.getUid(), TIMESTAMP, toAlias(aliasD4, d4.getUid())) // ValueType.DATE
-        .addColumn(d5.getUid(), TEXT, toAlias(aliasD5, d5.getUid())) // ValueType.ORGANISATION_UNIT
-        .addColumn(d6.getUid(), BIGINT, toAlias(aliasD6, d6.getUid())) // ValueType.INTEGER
         .addColumn(
-            d7.getUid(), GEOMETRY_POINT, toAlias(aliasD7, d7.getUid())) // ValueType.COORDINATES
+            d1.getUid(),
+            TEXT,
+            toSelectExpression(aliasD1, d1.getUid()),
+            Skip.SKIP) // ValueType.TEXT
+        .addColumn(
+            d2.getUid(),
+            DOUBLE,
+            toSelectExpression(aliasD2, d2.getUid()),
+            IndexType.BTREE) // ValueType.PERCENTAGE
+        .addColumn(
+            d3.getUid(),
+            INTEGER,
+            toSelectExpression(aliasD3, d3.getUid()),
+            IndexType.BTREE) // ValueType.BOOLEAN
+        .addColumn(
+            d4.getUid(),
+            TIMESTAMP,
+            toSelectExpression(aliasD4, d4.getUid()),
+            IndexType.BTREE) // ValueType.DATE
+        .addColumn(
+            d5.getUid(),
+            TEXT,
+            toSelectExpression(aliasD5, d5.getUid()),
+            IndexType.BTREE) // ValueType.ORGANISATION_UNIT
+        .addColumn(
+            d6.getUid(),
+            BIGINT,
+            toSelectExpression(aliasD6, d6.getUid()),
+            IndexType.BTREE) // ValueType.INTEGER
+        .addColumn(
+            d7.getUid(),
+            GEOMETRY_POINT,
+            toSelectExpression(aliasD7, d7.getUid())) // ValueType.COORDINATES
         // element d5 also creates a Geo column
         .addColumn(
-            d5.getUid() + "_geom", GEOMETRY, toAlias(aliasD5_geo, d5.getUid()), IndexType.GIST)
+            d5.getUid() + "_geom",
+            GEOMETRY,
+            toSelectExpression(aliasD5_geo, d5.getUid()),
+            IndexType.GIST)
         // element d5 also creates a Name column
-        .addColumn(d5.getUid() + "_name", TEXT, toAlias(aliasD5_name, d5.getUid() + "_name"))
-        .withDefaultColumns(subject.getFixedColumns())
+        .addColumn(
+            d5.getUid() + "_name",
+            TEXT,
+            toSelectExpression(aliasD5_name, d5.getUid() + "_name"),
+            Skip.SKIP)
+        .withDefaultColumns(JdbcEventAnalyticsTableManager.FIXED_COLS)
         .build()
         .verify();
   }
@@ -525,11 +561,16 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tables, hasSize(1));
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
-        .withTableName(TABLE_PREFIX + program.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + program.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + program.getUid().toLowerCase())
         .withTableType(AnalyticsTableType.EVENT)
         .withColumnSize(58 + OU_NAME_HIERARCHY_COUNT)
         .addColumns(periodColumns)
-        .addColumn(d1.getUid(), TEXT, toAlias(aliasD1, d1.getUid())) // ValueType.TEXT
+        .addColumn(
+            d1.getUid(),
+            TEXT,
+            toSelectExpression(aliasD1, d1.getUid()),
+            Skip.SKIP) // ValueType.TEXT
         .addColumn(
             tea1.getUid(), TEXT, String.format(aliasTea1, "ou.uid", tea1.getId(), tea1.getUid()))
         // Second Geometry column created from the OU column above
@@ -541,8 +582,9 @@ class JdbcEventAnalyticsTableManagerTest {
         .addColumn(
             tea1.getUid() + "_name",
             TEXT,
-            String.format(aliasTea1, "ou.name", tea1.getId(), tea1.getUid()))
-        .withDefaultColumns(subject.getFixedColumns())
+            String.format(aliasTea1, "ou.name", tea1.getId(), tea1.getUid()),
+            Skip.SKIP)
+        .withDefaultColumns(JdbcEventAnalyticsTableManager.FIXED_COLS)
         .build()
         .verify();
   }
@@ -695,8 +737,7 @@ class JdbcEventAnalyticsTableManagerTest {
 
   @Test
   void verifyGetAnalyticsTableWithOuLevels() {
-    List<OrganisationUnitLevel> ouLevels =
-        rnd.objects(OrganisationUnitLevel.class, 2).collect(Collectors.toList());
+    List<OrganisationUnitLevel> ouLevels = rnd.objects(OrganisationUnitLevel.class, 2).toList();
     Program programA = rnd.nextObject(Program.class);
     programA.setId(0);
 
@@ -736,20 +777,19 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tables, hasSize(1));
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
-        .withTableName(TABLE_PREFIX + programA.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + programA.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + programA.getUid().toLowerCase())
         .withTableType(AnalyticsTableType.EVENT)
         .withColumnSize(
-            subject.getFixedColumns().size()
+            JdbcEventAnalyticsTableManager.FIXED_COLS.size()
                 + PeriodType.getAvailablePeriodTypes().size()
                 + ouLevels.size()
                 + (programA.isRegistration() ? 1 : 0)
                 + OU_NAME_HIERARCHY_COUNT)
         .addColumns(periodColumns)
-        .withDefaultColumns(subject.getFixedColumns())
-        .addColumn(
-            quote("uidlevel" + ouLevels.get(0).getLevel()), col -> match(ouLevels.get(0), col))
-        .addColumn(
-            quote("uidlevel" + ouLevels.get(1).getLevel()), col -> match(ouLevels.get(1), col))
+        .withDefaultColumns(JdbcEventAnalyticsTableManager.FIXED_COLS)
+        .addColumn(("uidlevel" + ouLevels.get(0).getLevel()), col -> match(ouLevels.get(0), col))
+        .addColumn(("uidlevel" + ouLevels.get(1).getLevel()), col -> match(ouLevels.get(1), col))
         .build()
         .verify();
   }
@@ -757,7 +797,7 @@ class JdbcEventAnalyticsTableManagerTest {
   @Test
   void verifyGetAnalyticsTableWithOuGroupSet() {
     List<OrganisationUnitGroupSet> ouGroupSet =
-        rnd.objects(OrganisationUnitGroupSet.class, 2).collect(Collectors.toList());
+        rnd.objects(OrganisationUnitGroupSet.class, 2).toList();
     Program programA = rnd.nextObject(Program.class);
     programA.setId(0);
 
@@ -780,26 +820,26 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tables, hasSize(1));
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
-        .withTableName(TABLE_PREFIX + programA.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + programA.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + programA.getUid().toLowerCase())
         .withTableType(AnalyticsTableType.EVENT)
         .withColumnSize(
-            subject.getFixedColumns().size()
+            JdbcEventAnalyticsTableManager.FIXED_COLS.size()
                 + PeriodType.getAvailablePeriodTypes().size()
                 + ouGroupSet.size()
                 + (programA.isRegistration() ? 1 : 0)
                 + OU_NAME_HIERARCHY_COUNT)
         .addColumns(periodColumns)
-        .withDefaultColumns(subject.getFixedColumns())
-        .addColumn(quote(ouGroupSet.get(0).getUid()), col -> match(ouGroupSet.get(0), col))
-        .addColumn(quote(ouGroupSet.get(1).getUid()), col -> match(ouGroupSet.get(1), col))
+        .withDefaultColumns(JdbcEventAnalyticsTableManager.FIXED_COLS)
+        .addColumn(ouGroupSet.get(0).getUid(), col -> match(ouGroupSet.get(0), col))
+        .addColumn(ouGroupSet.get(1).getUid(), col -> match(ouGroupSet.get(1), col))
         .build()
         .verify();
   }
 
   @Test
   void verifyGetAnalyticsTableWithOptionGroupSets() {
-    List<CategoryOptionGroupSet> cogs =
-        rnd.objects(CategoryOptionGroupSet.class, 2).collect(Collectors.toList());
+    List<CategoryOptionGroupSet> cogs = rnd.objects(CategoryOptionGroupSet.class, 2).toList();
     Program programA = rnd.nextObject(Program.class);
     programA.setId(0);
 
@@ -822,40 +862,41 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(tables, hasSize(1));
 
     new AnalyticsTableAsserter.Builder(tables.get(0))
-        .withTableName(TABLE_PREFIX + programA.getUid().toLowerCase())
+        .withName(TABLE_PREFIX + programA.getUid().toLowerCase() + STAGING_TABLE_SUFFIX)
+        .withMainName(TABLE_PREFIX + programA.getUid().toLowerCase())
         .withTableType(AnalyticsTableType.EVENT)
         .withColumnSize(
-            subject.getFixedColumns().size()
+            JdbcEventAnalyticsTableManager.FIXED_COLS.size()
                 + PeriodType.getAvailablePeriodTypes().size()
                 + cogs.size()
                 + (programA.isRegistration() ? 1 : 0)
                 + OU_NAME_HIERARCHY_COUNT)
         .addColumns(periodColumns)
-        .withDefaultColumns(subject.getFixedColumns())
-        .addColumn(quote(cogs.get(0).getUid()), col -> match(cogs.get(0), col))
-        .addColumn(quote(cogs.get(1).getUid()), col -> match(cogs.get(1), col))
+        .withDefaultColumns(JdbcEventAnalyticsTableManager.FIXED_COLS)
+        .addColumn(cogs.get(0).getUid(), col -> match(cogs.get(0), col))
+        .addColumn(cogs.get(1).getUid(), col -> match(cogs.get(1), col))
         .build()
         .verify();
   }
 
   private void match(OrganisationUnitGroupSet ouGroupSet, AnalyticsTableColumn col) {
-    String name = quote(ouGroupSet.getUid());
+    String expression = "ougs." + quote(ouGroupSet.getUid());
     assertNotNull(col);
-    assertThat(col.getAlias(), is("ougs." + name));
+    assertThat(col.getSelectExpression(), is(expression));
     match(col);
   }
 
   private void match(OrganisationUnitLevel ouLevel, AnalyticsTableColumn col) {
-    String name = quote("uidlevel" + ouLevel.getLevel());
+    String expression = "ous." + quote("uidlevel" + ouLevel.getLevel());
     assertNotNull(col);
-    assertThat(col.getAlias(), is("ous." + name));
+    assertThat(col.getSelectExpression(), is(expression));
     match(col);
   }
 
   private void match(CategoryOptionGroupSet cog, AnalyticsTableColumn col) {
-    String name = quote(cog.getUid());
+    String expression = "acs." + quote(cog.getUid());
     assertNotNull(col);
-    assertThat(col.getAlias(), is("acs." + name));
+    assertThat(col.getSelectExpression(), is(expression));
     match(col);
   }
 
@@ -863,12 +904,8 @@ class JdbcEventAnalyticsTableManagerTest {
     assertNotNull(col.getCreated());
     assertThat(col.getDataType(), is(CHARACTER_11));
     assertThat(col.isSkipIndex(), is(false));
-    assertThat(col.getNotNull(), is(ColumnNotNullConstraint.NULL));
+    assertThat(col.getNullable(), is(NULL));
     assertThat(col.getIndexColumns(), hasSize(0));
-  }
-
-  private String quote(String string) {
-    return "\"" + string + "\"";
   }
 
   @Test
@@ -938,7 +975,7 @@ class JdbcEventAnalyticsTableManagerTest {
     assertThat(sql.getValue(), containsString(String.format(ouQuery, "name")));
   }
 
-  private String toAlias(String template, String uid) {
+  private String toSelectExpression(String template, String uid) {
     return String.format(template, uid, uid, uid);
   }
 
