@@ -33,6 +33,8 @@ import static org.hisp.dhis.common.IdentifiableObjectUtils.getIdentifiers;
 import static org.hisp.dhis.commons.util.TextUtils.getCommaDelimitedString;
 import static org.hisp.dhis.commons.util.TextUtils.getQuotedCommaDelimitedString;
 import static org.hisp.dhis.commons.util.TextUtils.getTokens;
+import static org.hisp.dhis.system.util.SqlUtils.escape;
+import static org.hisp.dhis.system.util.SqlUtils.quote;
 import static org.hisp.dhis.trackedentity.TrackedEntityQueryParams.CREATED_ID;
 import static org.hisp.dhis.trackedentity.TrackedEntityQueryParams.DELETED;
 import static org.hisp.dhis.trackedentity.TrackedEntityQueryParams.INACTIVE_ID;
@@ -46,8 +48,8 @@ import static org.hisp.dhis.trackedentity.TrackedEntityQueryParams.POTENTIAL_DUP
 import static org.hisp.dhis.trackedentity.TrackedEntityQueryParams.PROGRAM_INSTANCE_ALIAS;
 import static org.hisp.dhis.trackedentity.TrackedEntityQueryParams.TRACKED_ENTITY_ID;
 import static org.hisp.dhis.trackedentity.TrackedEntityQueryParams.TRACKED_ENTITY_TYPE_ID;
-import static org.hisp.dhis.util.DateUtils.getLongDateString;
-import static org.hisp.dhis.util.DateUtils.getLongGmtDateString;
+import static org.hisp.dhis.util.DateUtils.toLongDate;
+import static org.hisp.dhis.util.DateUtils.toLongGmtDate;
 
 import com.google.common.collect.Lists;
 import java.util.ArrayList;
@@ -80,16 +82,15 @@ import org.hisp.dhis.common.hibernate.SoftDeleteHibernateObjectStore;
 import org.hisp.dhis.commons.collection.CollectionUtils;
 import org.hisp.dhis.commons.util.SqlHelper;
 import org.hisp.dhis.event.EventStatus;
-import org.hisp.dhis.jdbc.StatementBuilder;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.organisationunit.OrganisationUnitStore;
 import org.hisp.dhis.security.acl.AclService;
 import org.hisp.dhis.setting.SettingKey;
 import org.hisp.dhis.setting.SystemSettingManager;
+import org.hisp.dhis.system.util.SqlUtils;
 import org.hisp.dhis.trackedentity.TrackedEntity;
 import org.hisp.dhis.trackedentity.TrackedEntityQueryParams;
 import org.hisp.dhis.trackedentity.TrackedEntityStore;
-import org.hisp.dhis.user.CurrentUserService;
 import org.hisp.dhis.user.User;
 import org.hisp.dhis.util.DateUtils;
 import org.hisp.dhis.webapi.controller.event.mapper.OrderParam;
@@ -139,8 +140,6 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
 
   private final OrganisationUnitStore organisationUnitStore;
 
-  private final StatementBuilder statementBuilder;
-
   private final SystemSettingManager systemSettingManager;
 
   // TODO too many arguments in constructor. This needs to be refactored.
@@ -148,25 +147,14 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
       EntityManager entityManager,
       JdbcTemplate jdbcTemplate,
       ApplicationEventPublisher publisher,
-      CurrentUserService currentUserService,
       AclService aclService,
-      StatementBuilder statementBuilder,
       OrganisationUnitStore organisationUnitStore,
       SystemSettingManager systemSettingManager) {
-    super(
-        entityManager,
-        jdbcTemplate,
-        publisher,
-        TrackedEntity.class,
-        currentUserService,
-        aclService,
-        false);
+    super(entityManager, jdbcTemplate, publisher, TrackedEntity.class, aclService, false);
 
-    checkNotNull(statementBuilder);
     checkNotNull(organisationUnitStore);
     checkNotNull(systemSettingManager);
 
-    this.statementBuilder = statementBuilder;
     this.organisationUnitStore = organisationUnitStore;
     this.systemSettingManager = systemSettingManager;
   }
@@ -216,10 +204,7 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
   }
 
   private String encodeAndQuote(Collection<String> elements) {
-    return getQuotedCommaDelimitedString(
-        elements.stream()
-            .map(element -> statementBuilder.encode(element, false))
-            .collect(Collectors.toList()));
+    return getQuotedCommaDelimitedString(elements.stream().map(SqlUtils::escape).toList());
   }
 
   @Override
@@ -555,10 +540,7 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
       } else {
         if (sortableAttributesAndFilters(params).stream()
             .anyMatch(i -> i.getItem().getUid().equals(orderParam.getField()))) {
-          columns.add(
-              statementBuilder.columnQuote(orderParam.getField())
-                  + ".value AS "
-                  + statementBuilder.columnQuote(orderParam.getField()));
+          columns.add(quote(orderParam.getField()) + ".value AS " + quote(orderParam.getField()));
         }
       }
     }
@@ -617,21 +599,21 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
       trackedEntity
           .append(whereAnd.whereAnd())
           .append(" TE.lastupdated >= '")
-          .append(getLongGmtDateString(DateUtils.nowMinusDuration(params.getLastUpdatedDuration())))
+          .append(toLongGmtDate(DateUtils.nowMinusDuration(params.getLastUpdatedDuration())))
           .append(SINGLE_QUOTE);
     } else {
       if (params.hasLastUpdatedStartDate()) {
         trackedEntity
             .append(whereAnd.whereAnd())
             .append(" TE.lastupdated >= '")
-            .append(getLongDateString(params.getLastUpdatedStartDate()))
+            .append(toLongDate(params.getLastUpdatedStartDate()))
             .append(SINGLE_QUOTE);
       }
       if (params.hasLastUpdatedEndDate()) {
         trackedEntity
             .append(whereAnd.whereAnd())
             .append(" TE.lastupdated <='")
-            .append(getLongDateString(params.getLastUpdatedEndDate()))
+            .append(toLongDate(params.getLastUpdatedEndDate()))
             .append(SINGLE_QUOTE);
       }
     }
@@ -640,7 +622,7 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
       if (params.getSkipChangedBefore() != null) {
         trackedEntity
             .append(" AND TE.lastupdated >= '")
-            .append(getLongDateString(params.getSkipChangedBefore()))
+            .append(toLongDate(params.getSkipChangedBefore()))
             .append(SINGLE_QUOTE);
       }
     }
@@ -688,9 +670,9 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
   private String joinAttributeValueWithQueryParameter(TrackedEntityQueryParams params) {
     StringBuilder attributes = new StringBuilder();
 
-    final String regexp = statementBuilder.getRegexpMatch();
-    final String wordStart = statementBuilder.getRegexpWordStart();
-    final String wordEnd = statementBuilder.getRegexpWordEnd();
+    final String regexp = "~*";
+    final String wordStart = "\\m";
+    final String wordEnd = "\\M";
     final String anyChar = "\\.*?";
     final String start = params.getQuery().isOperator(QueryOperator.LIKE) ? anyChar : wordStart;
     final String end = params.getQuery().isOperator(QueryOperator.LIKE) ? anyChar : wordEnd;
@@ -710,15 +692,13 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
         .append(") AND (");
 
     for (String queryToken : getTokens(params.getQuery().getFilter())) {
-      final String query = statementBuilder.encode(queryToken, false);
-
       attributes
           .append(orHlp.or())
           .append("lower(Q.value) ")
           .append(regexp)
           .append(" '")
           .append(start)
-          .append(StringUtils.lowerCase(query))
+          .append(StringUtils.lowerCase(escape(queryToken)))
           .append(end)
           .append(SINGLE_QUOTE);
     }
@@ -741,7 +721,7 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
             .collect(Collectors.toList());
 
     for (QueryItem queryItem : filterItems) {
-      String col = statementBuilder.columnQuote(queryItem.getItemId());
+      String col = quote(queryItem.getItemId());
       String teaId = col + ".trackedentityattributeid";
       String teav = "lower(" + col + ".value)";
       String ted = col + ".trackedentityid";
@@ -758,14 +738,13 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
           .append(" = TE.trackedentityid ");
 
       for (QueryFilter filter : queryItem.getFilters()) {
-        String encodedFilter = statementBuilder.encode(filter.getFilter(), false);
         attributes
             .append("AND ")
             .append(teav)
             .append(SPACE)
             .append(filter.getSqlOperator())
             .append(SPACE)
-            .append(StringUtils.lowerCase(filter.getSqlFilter(encodedFilter)));
+            .append(StringUtils.lowerCase(filter.getSqlFilter(escape(filter.getFilter()))));
       }
     }
 
@@ -791,12 +770,12 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
 
       joinOrderAttributes
           .append(" LEFT JOIN trackedentityattributevalue AS ")
-          .append(statementBuilder.columnQuote(orderAttribute.getItemId()))
+          .append(quote(orderAttribute.getItemId()))
           .append(" ON ")
-          .append(statementBuilder.columnQuote(orderAttribute.getItemId()))
+          .append(quote(orderAttribute.getItemId()))
           .append(".trackedentityid = TE.trackedentityid ")
           .append("AND ")
-          .append(statementBuilder.columnQuote(orderAttribute.getItemId()))
+          .append(quote(orderAttribute.getItemId()))
           .append(".trackedentityattributeid = ")
           .append(orderAttribute.getItem().getId())
           .append(SPACE);
@@ -939,28 +918,28 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
     if (params.hasProgramEnrollmentStartDate()) {
       program
           .append("AND EN.enrollmentdate >= '")
-          .append(getLongDateString(params.getProgramEnrollmentStartDate()))
+          .append(toLongDate(params.getProgramEnrollmentStartDate()))
           .append("' ");
     }
 
     if (params.hasProgramEnrollmentEndDate()) {
       program
           .append("AND EN.enrollmentdate <= '")
-          .append(getLongDateString(params.getProgramEnrollmentEndDate()))
+          .append(toLongDate(params.getProgramEnrollmentEndDate()))
           .append("' ");
     }
 
     if (params.hasProgramIncidentStartDate()) {
       program
           .append("AND EN.occurreddate >= '")
-          .append(getLongDateString(params.getProgramIncidentStartDate()))
+          .append(toLongDate(params.getProgramIncidentStartDate()))
           .append("' ");
     }
 
     if (params.hasProgramIncidentEndDate()) {
       program
           .append("AND EN.occurreddate <= '")
-          .append(getLongDateString(params.getProgramIncidentEndDate()))
+          .append(toLongDate(params.getProgramIncidentEndDate()))
           .append("' ");
     }
 
@@ -998,8 +977,8 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
     }
 
     if (params.hasEventStatus()) {
-      String start = getLongDateString(params.getEventStartDate());
-      String end = getLongDateString(params.getEventEndDate());
+      String start = toLongDate(params.getEventStartDate());
+      String end = toLongDate(params.getEventEndDate());
 
       if (params.isEventStatus(EventStatus.COMPLETED)) {
         events
@@ -1181,10 +1160,7 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
             .append(params.isIncludeDeleted() ? ", TE.deleted " : "");
 
     for (QueryItem queryItem : sortableAttributesAndFilters(params)) {
-      groupBy
-          .append(", TE.")
-          .append(statementBuilder.columnQuote(queryItem.getItemId()))
-          .append(SPACE);
+      groupBy.append(", TE.").append(quote(queryItem.getItemId())).append(SPACE);
     }
 
     return groupBy.toString();
@@ -1225,8 +1201,8 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
             .anyMatch(i -> i.getItem().getUid().equals(order.getField()))) {
           String orderField =
               innerOrder
-                  ? statementBuilder.columnQuote(order.getField()) + ".value "
-                  : MAIN_QUERY_ALIAS + "." + statementBuilder.columnQuote(order.getField());
+                  ? quote(order.getField()) + ".value "
+                  : MAIN_QUERY_ALIAS + "." + quote(order.getField());
 
           orderFields.add(orderField + SPACE + order.getDirection());
         }
@@ -1385,7 +1361,8 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
   }
 
   @Override
-  public void updateTrackedEntityLastUpdated(Set<String> trackedEntityUIDs, Date lastUpdated) {
+  public void updateTrackedEntityLastUpdated(
+      Set<String> trackedEntityUIDs, Date lastUpdated, String infoSnapshot) {
     List<List<String>> uidsPartitions =
         Lists.partition(Lists.newArrayList(trackedEntityUIDs), 20000);
 
@@ -1394,9 +1371,10 @@ public class HibernateTrackedEntityStore extends SoftDeleteHibernateObjectStore<
         .forEach(
             trackedEntities ->
                 getSession()
-                    .getNamedQuery("updateTeisLastUpdated")
+                    .getNamedQuery("updateTrackedEntitiesLastUpdated")
                     .setParameter("trackedEntities", trackedEntities)
                     .setParameter("lastUpdated", lastUpdated)
+                    .setParameter("lastupdatedbyuserinfo", infoSnapshot)
                     .executeUpdate());
   }
 
