@@ -85,9 +85,8 @@ import org.hisp.dhis.schema.Schema;
 import org.hisp.dhis.security.acl.AclService;
 import org.hisp.dhis.system.util.ReflectionUtils;
 import org.hisp.dhis.user.CurrentUser;
-import org.hisp.dhis.user.CurrentUserService;
 import org.hisp.dhis.user.CurrentUserUtil;
-import org.hisp.dhis.user.User;
+import org.hisp.dhis.user.UserDetails;
 import org.hisp.dhis.user.UserSettingKey;
 import org.hisp.dhis.user.UserSettingService;
 import org.hisp.dhis.util.CheckedFunction;
@@ -122,8 +121,6 @@ public abstract class AbstractFullReadOnlyController<T extends IdentifiableObjec
   protected static final WebOptions NO_WEB_OPTIONS = new WebOptions(new HashMap<>());
 
   @Autowired protected IdentifiableObjectManager manager;
-
-  @Autowired protected CurrentUserService currentUserService;
 
   @Autowired protected UserSettingService userSettingService;
 
@@ -200,7 +197,7 @@ public abstract class AbstractFullReadOnlyController<T extends IdentifiableObjec
       @RequestParam Map<String, String> rpParameters,
       OrderParams orderParams,
       HttpServletResponse response,
-      @CurrentUser User currentUser)
+      @CurrentUser UserDetails currentUser)
       throws ForbiddenException, BadRequestException {
     return getObjectList(
         rpParameters,
@@ -215,7 +212,7 @@ public abstract class AbstractFullReadOnlyController<T extends IdentifiableObjec
       @RequestParam Map<String, String> rpParameters,
       OrderParams orderParams,
       HttpServletResponse response,
-      User currentUser,
+      UserDetails userDetails,
       boolean countTotal,
       CheckedFunction<ListParams, List<T>> fetchList)
       throws ForbiddenException, BadRequestException {
@@ -230,7 +227,7 @@ public abstract class AbstractFullReadOnlyController<T extends IdentifiableObjec
     WebOptions options = new WebOptions(rpParameters);
     WebMetadata metadata = new WebMetadata();
 
-    if (!aclService.canRead(currentUser, getEntityClass())) {
+    if (!aclService.canRead(userDetails, getEntityClass())) {
       throw new ForbiddenException(
           "You don't have the proper permissions to read objects of this type.");
     }
@@ -275,7 +272,7 @@ public abstract class AbstractFullReadOnlyController<T extends IdentifiableObjec
   public ResponseEntity<String> getObjectListCsv(
       @RequestParam Map<String, String> rpParameters,
       OrderParams orderParams,
-      @CurrentUser User currentUser,
+      @CurrentUser UserDetails currentUser,
       @RequestParam(defaultValue = ",") char separator,
       @RequestParam(defaultValue = ";") String arraySeparator,
       @RequestParam(defaultValue = "false") boolean skipHeader,
@@ -409,7 +406,7 @@ public abstract class AbstractFullReadOnlyController<T extends IdentifiableObjec
     @SuppressWarnings("unchecked")
     Collection<IdentifiableObject> collection = (Collection<IdentifiableObject>) value;
 
-    return collection.stream().map(PrimaryKeyObject::getUid).collect(toList());
+    return collection.stream().map(PrimaryKeyObject::getUid).toList();
   }
 
   private static Object getAttributeValue(Object obj, String attrId) {
@@ -429,10 +426,11 @@ public abstract class AbstractFullReadOnlyController<T extends IdentifiableObjec
   public @ResponseBody ResponseEntity<?> getObject(
       @OpenApi.Param(UID.class) @PathVariable("uid") String pvUid,
       @RequestParam Map<String, String> rpParameters,
-      @CurrentUser User currentUser,
+      @CurrentUser UserDetails currentUser,
       HttpServletRequest request,
       HttpServletResponse response)
       throws ForbiddenException, NotFoundException {
+
     if (!aclService.canRead(currentUser, getEntityClass())) {
       throw new ForbiddenException(
           "You don't have the proper permissions to read objects of this type.");
@@ -458,7 +456,7 @@ public abstract class AbstractFullReadOnlyController<T extends IdentifiableObjec
             new ArrayList<>(),
             getPaginationData(options),
             options.getRootJunction());
-    query.setUser(currentUser);
+    query.setCurrentUserDetails(currentUser);
     query.setObjects(List.of(entity));
     query.setDefaults(Defaults.valueOf(options.get("defaults", DEFAULTS)));
 
@@ -481,9 +479,10 @@ public abstract class AbstractFullReadOnlyController<T extends IdentifiableObjec
       @OpenApi.Param(PropertyNames.class) @PathVariable("property") String pvProperty,
       @RequestParam Map<String, String> rpParameters,
       TranslateParams translateParams,
-      @CurrentUser User currentUser,
+      @CurrentUser UserDetails currentUser,
       HttpServletResponse response)
       throws ForbiddenException, NotFoundException {
+
     if (!"translations".equals(pvProperty)) {
       setTranslationParams(translateParams);
     }
@@ -520,7 +519,7 @@ public abstract class AbstractFullReadOnlyController<T extends IdentifiableObjec
       Map<String, String> parameters,
       List<String> filters,
       List<String> fields,
-      User currentUser)
+      UserDetails currentUser)
       throws NotFoundException {
     WebOptions options = new WebOptions(parameters);
     T entity = getEntity(uid, options);
@@ -532,7 +531,7 @@ public abstract class AbstractFullReadOnlyController<T extends IdentifiableObjec
             new ArrayList<>(),
             getPaginationData(options),
             options.getRootJunction());
-    query.setUser(currentUser);
+    query.setCurrentUserDetails(currentUser);
     query.setObjects(List.of(entity));
     query.setDefaults(Defaults.valueOf(options.get("defaults", DEFAULTS)));
 
